--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/prashantpawar/filminator/issues"
   },
-  "homepage": "https://github.com/prashantpawar/filminator"
+  "homepage": "https://github.com/prashantpawar/filminator",
+  "dependencies": {
+    "imagemagick": "^0.1.3"
+  }
 }
